adjusted padding on cols

--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -19,9 +19,27 @@
     <!--  -->
     <h3>Full width</h3>
     <div class="flex mb-4">
-      <div class="w-full p-2">
-        <div class="bg-red-light w-full mh-1 text-center bold p-5">
-          Full width
+      <div class="w-full">
+        <div class="bg-red-light w-full text-center bold p-5">Full width</div>
+      </div>
+    </div>
+
+    <!--  -->
+    <h3>Half width on desktop/full width on mobile</h3>
+    <p>Stretching column to fit in row.</p>
+    <div class="flex flex-wrap mb-4">
+      <div class="w-full w-half-ns mb-4 mb-0-ns">
+        <div class="bg-turqouise-light w-full bold p-5 height-100">
+          Half width
+        </div>
+      </div>
+      <div class="w-full w-half-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-turqouise-light w-full bold p-5">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+          mollis velit non gravida venenatis. Praesent consequat lectus purus,
+          ut scelerisque velit condimentum eu. Maecenas sagittis ante ut turpis
+          varius interdum. Quisque tellus ipsum, eleifend non ipsum id, suscipit
+          ultricies neque.
         </div>
       </div>
     </div>
@@ -29,13 +47,13 @@
     <!--  -->
     <h3>Half width on desktop/full width on mobile</h3>
     <div class="flex flex-wrap mb-4">
-      <div class="p-2 w-full w-half-ns">
-        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+      <div class="w-full w-half-ns mb-4 mb-0-ns">
+        <div class="bg-turqouise-light w-full text-center bold p-5">
           Half width
         </div>
       </div>
-      <div class="p-2 w-full w-half-ns">
-        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+      <div class="w-full w-half-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-turqouise-light w-full text-center bold p-5">
           Half width
         </div>
       </div>
@@ -44,18 +62,33 @@
     <!--  -->
     <h3>One third width on desktop/full width on mobile</h3>
     <div class="flex flex-wrap mb-4">
-      <div class="flex w-full w-third-ns p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+      <div class="flex w-full w-third-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
           One third width
         </div>
       </div>
-      <div class="flex w-full w-third-ns p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+      <div class="flex w-full w-third-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
           One third width
         </div>
       </div>
-      <div class="flex w-full w-third-ns p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+      <div class="flex w-full w-third-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
+          One third width
+        </div>
+      </div>
+    </div>
+
+    <!--  -->
+    <h3>Two third/One third width on desktop/full width on mobile</h3>
+    <div class="flex flex-wrap mb-4">
+      <div class="flex w-full w-two-thirds-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
+          Two third width
+        </div>
+      </div>
+      <div class="flex w-full w-third-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
           One third width
         </div>
       </div>
@@ -64,23 +97,23 @@
     <!--  -->
     <h3>One quarter width desktop/full width mobile</h3>
     <div class="flex flex-wrap mb-4">
-      <div class="w-full w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-full w-quarter-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-full w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-full w-quarter-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-full w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-full w-quarter-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-full w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-full w-quarter-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
@@ -89,22 +122,22 @@
     <!--  -->
     <h3>One quarter width desktop/half width mobile</h3>
     <div class="flex flex-wrap mb-4">
-      <div class="w-half w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-half w-quarter-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-half w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-half w-quarter-ns pl-4 mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-half w-quarter-ns p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-half w-quarter-ns pl-4-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
           One quarter width
         </div>
       </div>
-      <div class="w-half w-quarter-ns p-2">
+      <div class="w-half w-quarter-ns pl-4 mb-4 mb-0-ns">
         <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
           One quarter width
         </div>
@@ -112,71 +145,15 @@
     </div>
 
     <!--  -->
-    <h2>Float based grid</h2>
-
-    <!--  -->
-    <h3>Full width</h3>
-    <div class="clear-fix mb-4">
-      <div class="float-left w-full p-2">
-        <div class="bg-red-light w-full mh-1 text-center bold p-5">
-          Full width
+    <h3>Three quarter/one quarter width desktop/half width mobile</h3>
+    <div class="flex flex-wrap mb-4 ">
+      <div class="w-half w-three-quarters-ns mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
+          Three quarter width
         </div>
       </div>
-    </div>
-
-    <!--  -->
-    <h3>Half width</h3>
-    <div class="clear-fix mb-4">
-      <div class="float-left w-half p-2">
-        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
-          Half width
-        </div>
-      </div>
-      <div class="float-left w-half p-2">
-        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
-          Half width
-        </div>
-      </div>
-    </div>
-    <!--  -->
-    <h3>One third width</h3>
-    <div class="clear-fix mb-4">
-      <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
-          One third width
-        </div>
-      </div>
-      <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
-          One third width
-        </div>
-      </div>
-      <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
-          One third width
-        </div>
-      </div>
-    </div>
-    <!--  -->
-    <h3>One quarter width</h3>
-    <div class="clear-fix mb-4">
-      <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
-          One quarter width
-        </div>
-      </div>
-      <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
-          One quarter width
-        </div>
-      </div>
-      <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
-          One quarter width
-        </div>
-      </div>
-      <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+      <div class="w-half w-quarter-ns pl-4 mb-4 mb-0-ns">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
