--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -25,13 +25,34 @@
     </div>
 
     <!--  -->
+    <h3>
+      Experiment with gutter class<br />One third width on desktop/full width on
+      mobile
+    </h3>
+    <div class="flex flex-wrap mb-4 gutter-ns">
+      <div class="flex w-full w-third-ns ph-2-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
+          One third width
+        </div>
+      </div>
+      <div class="flex w-full w-third-ns ph-2-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
+          One third width
+        </div>
+      </div>
+      <div class="flex w-full w-third-ns ph-2-ns mb-4 mb-0-ns">
+        <div class="bg-blue-light w-full text-center bold p-5">
+          One third width
+        </div>
+      </div>
+    </div>
+
+    <!--  -->
     <h3>Half width on desktop/full width on mobile</h3>
     <p>Stretching column to fit in row.</p>
     <div class="flex flex-wrap mb-4">
-      <div class="w-full w-half-ns mb-4 mb-0-ns">
-        <div class="bg-turqouise-light w-full bold p-5 height-100">
-          Half width
-        </div>
+      <div class="w-full w-half-ns mb-4 mb-0-ns flex">
+        <div class="bg-turqouise-light w-full bold p-5 ">Half width</div>
       </div>
       <div class="w-full w-half-ns pl-4-ns mb-4 mb-0-ns">
         <div class="bg-turqouise-light w-full bold p-5">
@@ -123,17 +144,17 @@
     <h3>One quarter width desktop/half width mobile</h3>
     <div class="flex flex-wrap mb-4">
       <div class="w-half w-quarter-ns mb-4 mb-0-ns">
-        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
       <div class="w-half w-quarter-ns pl-4 mb-4 mb-0-ns">
-        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
       <div class="w-half w-quarter-ns pl-4-ns mb-4 mb-0-ns">
-        <div class="bg-heritage-yellow-40 w-full  text-center bold p-5">
+        <div class="bg-heritage-yellow-40 w-full text-center bold p-5">
           One quarter width
         </div>
       </div>
