--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -112,18 +112,46 @@
   <br>
   <br>
 
-  <ul class="m-0 p-0 list-style-none">
+  <ul class="m-0 p-0">
     <li class="mb-3">In this section</li>
     <li class="mb-7">
       <span class="h2 block mt-0 mb-2">Something's wrong with a purchase</span>
-      <ul class="list-style-none m-0 p-0">
-        <li class="block list-style-none m-0 p-0"><a href="#" class="bg-blue-light p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">Link to current page visited</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A link to a page</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A much much much longer link to another page</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A link to a page</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A link to a page</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A link to a page</a></li>
-        <li class="block list-style-none m-0 p-0"><a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black  hover-bg-blue-light" style="width:100%">A link to a page</a></li>
+      <ul class="m-0 p-0">
+        <li>
+          <a href="#" class="bg-blue-light p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            Link to current page visited
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A link to a page
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A much much much longer link to another page
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A link to a page
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A link to a page
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A link to a page
+          </a>
+        </li>
+        <li>
+          <a href="#" class="p-2 inline-block no-underline b-bottom-width-0 black hover-bg-blue-light w-full">
+            A link to a page
+          </a>
+        </li>
       </ul>
     </li>
   </ul>
